# iCONTROL

./: ._hooks_probe_20260109_123621.txt  ._ops_probe_20260109_123043.txt  ._ops_probe_20260109_124012.txt  ._postcommit_probe2_20260109_124333.txt  ._postcommit_probe_20260109_124243.txt  .cursorignore  .env.example  .eslintrc.cjs  .gitignore  .max-phases.sh  .prettierignore  .run-max-phases-validation.sh  .runbook-zero-boucle.sh  .triage-working-tree.sh  ARCHITECTURE.md  ARTEFACTS_POLICY.md  CHANGELOG.md  CONTRIBUTING.md  CONVERGENCE_PLAN.md  DUPLICATE_RISKS.md  EXISTING_SURFACE_MAP.md  LICENSE  NOTICE  PATHS_CANONICAL.md  PHASE9_CLOSEOUT.md  PROMPTS_GENERATION_IMAGES_CHATGPT.md  README.md  RELEASE_MANIFEST.json  RUNBOOK_ROLLBACK.md  SPECIFICATION_COMPLETE_PAGES_DETAILLEE.md  SPECIFICATION_VISUELLE_INTERFACE.md  STRUCTURE_BOUNDARIES.md  _AMELIORATIONS_APPLIQUEES.md  _AMELIORATIONS_APP_CONTROLE_PARFAITE.md  _AMELIORATIONS_FINALES_PARFAITES.md  _AMELIORATIONS_SPECIFICATION_IMPLEMENTATION.md  _ANALYSE_AMELIORATIONS_MANQUANTES.md  _ANALYSE_PAGES_PARTAGEES.md  _ANALYSE_SYSTEME_EDITION_VISUEL.md  _AUDIT_100_POURCENT_FINAL.md  (+54 more)
._WIP_BACKUPS/: status-20260118-220142.txt  wip-20260118-220142.patch
.githooks/: post-commit  pre-commit  pre-commit-orchestrator  pre-push
.github/: README.md
_REPORTS/: CORE_KERNEL_FREEZE_REPORT_2026-01-09T15-50-38-313Z.md  ICONTROL_AUDIT_NO_LEAKS_20260109_112627.md  ICONTROL_AUDIT_NO_LEAKS_20260109_112735.md  ICONTROL_AUDIT_NO_LEAKS_20260109_112956.md  INDEX.md  (+12 more)
_archive/: README.md
app-desktop-control/src-tauri/: Cargo.toml  tauri.conf.json
(+2865 files in other folders)
