[package]
name = "icontrol_desktop_control"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
